fix: title line spacing, responsive height

--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,5 +1,6 @@
 .title {
-  @apply m-0 leading-7 text-6xl whitespace-nowrap;
+  @apply m-0 leading-normal text-6xl text-center;
+  @apply -md:text-4xl -md:leading-normal;
 }
 
 .text-gradient {
